@@ -1,4 +1,4 @@
-.TH HDPARM 8 "November 2004" "Version 5.8"
+.TH HDPARM 8 "February 2005" "Version 5.9"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
@@ -81,7 +81,7 @@ flags can be used to manipulate the IDE power modes.
 .I -d
 Disable/enable the "using_dma" flag for this drive.  This option now works
 with most combinations of drives and PCI interfaces which support DMA
-and which are known to the IDE driver.
+and which are known to the kernel IDE driver.
 It is also a good idea to use the appropriate
 .I -X
 option in combination with
