@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	5.8
-Entered-date:	2004-11-03
+Version:	5.9
+Entered-date:	2005-02-02
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v5.9 bug fix: -W1/-W0 now work again
 		v5.8 minor fixes
 		v5.7 bug fixes, --direct flag (O_DIRECT), other enhancements
 		v5.6 cleanups, new "-Istdout" flag, removed MAJOR-nr restrictions
@@ -43,7 +44,7 @@ Keywords:	ide eide ata atapi performance kernel cd cdrom disk device driver
 Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		39K hdparm-5.8.tar.gz
+		39K hdparm-5.9.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
